Fix overflow

--- a/app/src/sass/repl-box.scss
+++ b/app/src/sass/repl-box.scss
@@ -6,6 +6,7 @@
   bottom: 0;
   border: 1px solid darkgray;
   padding: 4px;
+  overflow: auto;
 
   * {
     font-size: 16px;
